# real-router

./: .TODO_COMPLETE  .env.example  .gitignore  .jscpd.json  .mcp.json  .npmrc  .prettierignore  .size-limit.js  .size-limit.json  ARCHITECTURE.md  ASYNC_NAVIGATE_TIMER_FIX.md  BOULDER_COMPLETION_REPORT.md  CHANGELOG.md  CLAUDE.md  COMPLETION_REPORT.md  CONTRIBUTING.md  IMPLEMENTATION_NOTES.md  README.md  README_PROMISE_API.md  SECURITY.md  TODO_STATUS.json  WORK_COMPLETE_VERIFICATION.md  codecov.yml  commitlint.config.mjs  cz.config.js  dangerfile.ts  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  sonar-project.properties  syncpack.config.mjs  tsconfig.json  tsconfig.node.json  tsdown.base.ts  tsup.base.mts  turbo.json  vitest.config.bench.mts  (+5 more)
.changeset/: 532-angular-link-hash.md  532-angular-scroll-restore-fix.md  532-browser-plugin-hash.md  532-hash-plugin-limitation.md  532-navigation-plugin-hash.md  532-preact-link-hash.md  532-preact-scroll-restore-fix.md  532-react-link-hash.md  532-react-scroll-restore-fix.md  532-solid-link-hash.md  532-solid-scroll-restore-fix.md  532-sources-hash-active.md  532-svelte-link-hash.md  532-svelte-scroll-restore-fix.md  532-vue-link-hash.md  532-vue-scroll-restore-fix.md  README.md  a11y-announcer-preact-feature.md  a11y-announcer-react-feature.md  a11y-announcer-solid-feature.md  (+1055 more)
examples/desktop/tauri/react/src-tauri/: Cargo.toml
examples/desktop/tauri/react/src-tauri/icons/: icon.icns
examples/tauri/react-navigation/src-tauri/: Cargo.toml  tauri.conf.json
(+3584 files in other folders)
