[package]
name = "real-router-tauri-navigation-demo"
version = "0.0.0"
description = "real-router demo — Tauri v2 + navigation-plugin"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
